force-app/main/default/objects/GoodsInOut__c/GoodsInOut__c.object-meta.xml
<CustomObject>
    <label>GoodsInOut</label>
    <nameField>
        <displayFormat>GR-{0000000}</displayFormat>
        <label>GoodsReceiving Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>GoodsInOuts</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>