force-app/main/default/objects/GoodsInOut__c/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <formula>IF( NOT( ISBLANK( StroeCode__c ) ) , TEXT(StroeCode__r.Sales_Region__c) ,
IF( NOT( ISBLANK( Customer__c ) ) , TEXT(Customer__r.Sales_Region__c) ,
IF( NOT( ISBLANK( GiftGrid__c ) ) , &apos;Hisense &apos; + GiftGrid__r.CountryOfOrigin__c , &apos;&apos;) ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Country</label>
    <type>Text</type>
</CustomField>