force-app/main/default/objects/GoodsInOut__c/fields/GiftGrid__c.field-meta.xml
<CustomField>
    <fullName>GiftGrid__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>GiftGrid</label>
    <referenceTo>Gridding__c</referenceTo>
    <relationshipLabel>GoodsInOuts</relationshipLabel>
    <relationshipName>GoodsInOuts</relationshipName>
    <type>Lookup</type>
</CustomField>