force-app/main/default/objects/GoodsInOut__c/fields/ProductModel__c.field-meta.xml
<CustomField>
    <fullName>ProductModel__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product Model</label>
    <referenceTo>Product__c</referenceTo>
    <relationshipName>GoodsInAndOuts</relationshipName>
    <type>Lookup</type>
</CustomField>