force-app/main/default/objects/GoodsInOut__c/fields/Quantities__c.field-meta.xml
<CustomField>
    <fullName>Quantities__c</fullName>
    <label>Quantities</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>