force-app/main/default/objects/GoodsInOut__c/fields/ReceivedNo__c.field-meta.xml
<CustomField>
    <fullName>ReceivedNo__c</fullName>
    <displayFormat>ReceivedNo-{000000}</displayFormat>
    <label>Received No</label>
    <type>AutoNumber</type>
</CustomField>