force-app/main/default/objects/GoodsInOut__c/fields/ReportDate__c.field-meta.xml
<CustomField>
    <fullName>ReportDate__c</fullName>
    <label>Report Date</label>
    <type>DateTime</type>
</CustomField>