force-app/main/default/objects/GoodsInOut__c/fields/StroeCode__c.field-meta.xml
<CustomField>
    <fullName>StroeCode__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Stroe Code</label>
    <referenceTo>Shop__c</referenceTo>
    <relationshipName>GoodsReceivings</relationshipName>
    <type>Lookup</type>
</CustomField>