force-app/main/default/objects/GoodsInOut__c/recordTypes/In.recordType-meta.xml
<RecordType>
    <fullName>In</fullName>
    <active>true</active>
    <label>In</label>
</RecordType>