force-app/main/default/objects/GoodsInOut__c/recordTypes/Out.recordType-meta.xml
<RecordType>
    <fullName>Out</fullName>
    <active>true</active>
    <label>Out</label>
</RecordType>