force-app/main/default/objects/GoodsInOut__c/validationRules/CanNotEdit.validationRule-meta.xml
<ValidationRule>
    <fullName>CanNotEdit</fullName>
    <active>false</active>
    <description>Submitted GoodsReceiving could not be update</description>
    <errorConditionFormula>Text( PRIORVALUE(Status__c)) == &quot;Approved&quot;</errorConditionFormula>
    <errorMessage>You encountered some errors when trying to save this record Submitted GoodsReceiving should not be changeable</errorMessage>
</ValidationRule>