force-app/main/default/objects/GoodsInOut__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>ProductModel__c</columns>
    <columns>PromoterDailyReport__c</columns>
    <columns>ReceivedNo__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>ReportDate__c</columns>
    <columns>StroeCode__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>